Sync all content

--- a/content/resources/mit12_340s12_lec20.md
+++ b/content/resources/mit12_340s12_lec20.md
@@ -4,6 +4,7 @@ description: 'This resource contains information regarding climate models III: p
   and projections.'
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/12-340-global-warming-science-spring-2012/77841d308f6c06ec2889e92d1f70f2e4_MIT12_340S12_lec20.pdf
 file_type: application/pdf
+parent_uid: a4c8b5f7-6525-87c3-687f-5cd2fea0777f
 resourcetype: Document
 title: Global Warming Science, Lecture 20
 uid: 77841d30-8f6c-06ec-2889-e92d1f70f2e4
