--- a/content/resources/mit12_340s12_lec10.md
+++ b/content/resources/mit12_340s12_lec10.md
@@ -4,6 +4,7 @@ description: This resource contains information regarding the circulation of the
   and oceans I.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/12-340-global-warming-science-spring-2012/8719a929fe9e4e1688592f45e9ff11e0_MIT12_340S12_lec10.pdf
 file_type: application/pdf
+parent_uid: a4c8b5f7-6525-87c3-687f-5cd2fea0777f
 resourcetype: Document
 title: Global Warming Science, Lecture 10
 uid: 8719a929-fe9e-4e16-8859-2f45e9ff11e0
