--- a/content/resources/mit12_340s12_lec11.md
+++ b/content/resources/mit12_340s12_lec11.md
@@ -4,6 +4,7 @@ description: This resource contains information regarding the circulation of the
   and oceans II.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/12-340-global-warming-science-spring-2012/97991e926507053c2fd0d45af5ce1f63_MIT12_340S12_lec11.pdf
 file_type: application/pdf
+parent_uid: a4c8b5f7-6525-87c3-687f-5cd2fea0777f
 resourcetype: Document
 title: Global Warming Science, Lecture 11
 uid: 97991e92-6507-053c-2fd0-d45af5ce1f63
