--- a/content/resources/mit12_340s12_lec15.md
+++ b/content/resources/mit12_340s12_lec15.md
@@ -4,6 +4,7 @@ description: This resource contains information regarding climate sensitivity, f
   and feedbacks.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/12-340-global-warming-science-spring-2012/3861d78f1fe31fe3e6fa9d01efbc2d1a_MIT12_340S12_lec15.pdf
 file_type: application/pdf
+parent_uid: a4c8b5f7-6525-87c3-687f-5cd2fea0777f
 resourcetype: Document
 title: Global Warming Science, Lecture 15
 uid: 3861d78f-1fe3-1fe3-e6fa-9d01efbc2d1a
