--- a/content/resources/mit12_340s12_lec19.md
+++ b/content/resources/mit12_340s12_lec19.md
@@ -3,6 +3,7 @@ content_type: resource
 description: 'This resource contains information regarding climate models II: parameterizations.'
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/12-340-global-warming-science-spring-2012/9b601daf1b15b1d2c8dc47b0262962b8_MIT12_340S12_lec19.pdf
 file_type: application/pdf
+parent_uid: a4c8b5f7-6525-87c3-687f-5cd2fea0777f
 resourcetype: Document
 title: Global Warming Science, Lecture 19
 uid: 9b601daf-1b15-b1d2-c8dc-47b0262962b8
