--- a/content/resources/mit12_340s12_lec21.md
+++ b/content/resources/mit12_340s12_lec21.md
@@ -4,6 +4,7 @@ description: This resource contains information regarding climate change mitigat
   and some links to adaptation.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/12-340-global-warming-science-spring-2012/d6f8b6745ad5742eadec73b35458f295_MIT12_340S12_lec21.pdf
 file_type: application/pdf
+parent_uid: a4c8b5f7-6525-87c3-687f-5cd2fea0777f
 resourcetype: Document
 title: Global Warming Science, Lecture 21
 uid: d6f8b674-5ad5-742e-adec-73b35458f295
