--- a/content/resources/mit12_340s12_lec22.md
+++ b/content/resources/mit12_340s12_lec22.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains information regarding geoengineering.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/12-340-global-warming-science-spring-2012/30ca93b31f6bd833af6ccbb2accbf313_MIT12_340S12_lec22.pdf
 file_type: application/pdf
+parent_uid: a4c8b5f7-6525-87c3-687f-5cd2fea0777f
 resourcetype: Document
 title: Global Warming Science, Lecture 22
 uid: 30ca93b3-1f6b-d833-af6c-cbb2accbf313
