--- a/content/resources/mit12_340s12_lec3-1.md
+++ b/content/resources/mit12_340s12_lec3-1.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains information regarding paleoclimate 1.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/12-340-global-warming-science-spring-2012/15e8c5d4ded4ade4df69ced34321aa2f_MIT12_340S12_lec3-1.pdf
 file_type: application/pdf
+parent_uid: a4c8b5f7-6525-87c3-687f-5cd2fea0777f
 resourcetype: Document
 title: Global Warming Science, Lecture 3-1
 uid: 15e8c5d4-ded4-ade4-df69-ced34321aa2f
