--- a/content/resources/mit12_340s12_lec3-2.md
+++ b/content/resources/mit12_340s12_lec3-2.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains information regarding paleoclimate 2.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/12-340-global-warming-science-spring-2012/acb65576a1f41d4b7753bac10a6f2742_MIT12_340S12_lec3-2.pdf
 file_type: application/pdf
+parent_uid: a4c8b5f7-6525-87c3-687f-5cd2fea0777f
 resourcetype: Document
 title: Global Warming Science, Lecture 3-2
 uid: acb65576-a1f4-1d4b-7753-bac10a6f2742
