--- a/content/resources/mit12_340s12_lec4.md
+++ b/content/resources/mit12_340s12_lec4.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains information regarding the instrumental record.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/12-340-global-warming-science-spring-2012/db18b3490df50e07427aed64f8a421a3_MIT12_340S12_lec4.pdf
 file_type: application/pdf
+parent_uid: a4c8b5f7-6525-87c3-687f-5cd2fea0777f
 resourcetype: Document
 title: Global Warming Science, Lecture 4
 uid: db18b349-0df5-0e07-427a-ed64f8a421a3
