--- a/content/resources/mit12_340s12_lec5.md
+++ b/content/resources/mit12_340s12_lec5.md
@@ -4,6 +4,7 @@ description: This resource contains information regarding atmospheric compositio
   and greenhouse gases.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/12-340-global-warming-science-spring-2012/059a14044fe98339e4ec0180f5febf03_MIT12_340S12_lec5.pdf
 file_type: application/pdf
+parent_uid: a4c8b5f7-6525-87c3-687f-5cd2fea0777f
 resourcetype: Document
 title: Global Warming Science, Lecture 5
 uid: 059a1404-4fe9-8339-e4ec-0180f5febf03
