--- a/content/resources/mit12_340s12_lec8.md
+++ b/content/resources/mit12_340s12_lec8.md
@@ -4,6 +4,7 @@ description: This resource contains information regarding radiative-convective e
   I.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/12-340-global-warming-science-spring-2012/72b3a0e14883e46cde074789d4003d50_MIT12_340S12_lec8.pdf
 file_type: application/pdf
+parent_uid: a4c8b5f7-6525-87c3-687f-5cd2fea0777f
 resourcetype: Document
 title: Global Warming Science, Lecture 8
 uid: 72b3a0e1-4883-e46c-de07-4789d4003d50
