--- a/content/resources/mit12_340s12_lec9.md
+++ b/content/resources/mit12_340s12_lec9.md
@@ -4,6 +4,7 @@ description: This resource contains information regarding radiative-convective e
   II.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/12-340-global-warming-science-spring-2012/1b0f2ec34f1940b2fdb14f02b866aed9_MIT12_340S12_lec9.pdf
 file_type: application/pdf
+parent_uid: a4c8b5f7-6525-87c3-687f-5cd2fea0777f
 resourcetype: Document
 title: Global Warming Science, Lecture 9
 uid: 1b0f2ec3-4f19-40b2-fdb1-4f02b866aed9
