--- a/content/resources/mit12_340s12_ps3.md
+++ b/content/resources/mit12_340s12_ps3.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains information regarding problem set 3.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/12-340-global-warming-science-spring-2012/3bd61bbe70c5519f351d027bed63b24b_MIT12_340S12_PS3.pdf
 file_type: application/pdf
+parent_uid: f5ac3b12-eb0d-9f8c-4f11-2738177a95d7
 resourcetype: Document
 title: Global Warming Science, Assignments 3
 uid: 3bd61bbe-70c5-519f-351d-027bed63b24b
