--- a/content/resources/mit12_340s12_ps4.md
+++ b/content/resources/mit12_340s12_ps4.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains information regarding problem set 4.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/12-340-global-warming-science-spring-2012/317b72dbd41b5d12cf9a3275592a22a5_MIT12_340S12_PS4.pdf
 file_type: application/pdf
+parent_uid: f5ac3b12-eb0d-9f8c-4f11-2738177a95d7
 resourcetype: Document
 title: Global Warming Science, Assignments 4
 uid: 317b72db-d41b-5d12-cf9a-3275592a22a5
